added sample text to the main section for testing purposes

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,10 @@
     </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <h1>This is a test!</h1>
+      <p>I am testing things to see how these tweets will look on the page yayayayayayaya</p>
+      <h2>TWEET TWEET TWEET</h2>
+    </main>
   </body>
 </html>
