tried to fix bug with bolding of the Write word and it removing the space

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <nav>
       <span>tweeter</span>
       <div class="right-display">
-        <div><b>Write</b> a new tweet</div>
+        <div>Write a new tweet</div>
         <i class="fa-solid fa-angles-down"></i>
       </div>
    
