--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
 
 
   <!-- External JS -->
@@ -69,6 +70,24 @@
           <output name="counter" class="counter" for="tweet-text">140</output>
         </div>
       </form>
+    </section>
+    <section class="tweets">
+      <article class="tweets">
+        <header>
+         <p><img src="https://i.imgur.com/73hZDYK.png">
+        Newton</p>
+        <br>
+         <p class="tag">@SirIssac</p>
+        </header>
+  
+        <footer>
+          <p class="images"><i class="fa-solid fa-flag"></i>
+          <i class="fa-solid fa-retweet"></i>
+          <i class="fa-solid fa-heart"></i></p>
+        </footer>
+
+      </article>
+
     </section>
   </main>
 </body>
