modified the tweet section of HTML to access and work with different divs and headings in CSS

--- a/public/index.html
+++ b/public/index.html
@@ -74,13 +74,13 @@
     <section class="tweets">
       <article class="tweets">
         <header>
-         <p><img src="https://i.imgur.com/73hZDYK.png">
-        Newton</p>
-        <br>
-         <p class="tag">@SirIssac</p>
+        <div><img src="https://i.imgur.com/73hZDYK.png"></div>
+        <div class="name"><h3>Newton</h3>
+         <h3 class="color">@SirIssac</h3></div>
         </header>
-  
+        <div class="tweet">If I have seen further it is by standing on the shoulders of giants</div>
         <footer>
+          10 days ago
           <p class="images"><i class="fa-solid fa-flag"></i>
           <i class="fa-solid fa-retweet"></i>
           <i class="fa-solid fa-heart"></i></p>
