--- a/public/index.html
+++ b/public/index.html
@@ -71,23 +71,7 @@
         </div>
       </form>
     </section>
-    <section class="tweets">
-      <article class="tweets">
-        <header>
-        <div><img src="https://i.imgur.com/73hZDYK.png"></div>
-        <div class="name"><h3>Newton</h3>
-         <h3 class="color">@SirIssac</h3></div>
-        </header>
-        <div class="tweet">If I have seen further it is by standing on the shoulders of giants</div>
-        <footer>
-          10 days ago
-          <p class="images"><i class="fa-solid fa-flag"></i>
-          <i class="fa-solid fa-retweet"></i>
-          <i class="fa-solid fa-heart"></i></p>
-        </footer>
-
-      </article>
-
+    <section class="tweets-container">
     </section>
   </main>
 </body>
