added error element

--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,11 @@
   <!-- Page-specific (main) content here -->
   <main class="container">
     <section class="new-tweet">
+      <div class="error">
+       <i class="fa-solid fa-triangle-exclamation"></i>
+       <p class="error-msg"></p>
+       <i class="fa-solid fa-triangle-exclamation"></i>
+      </div>
       <h2>Compose Tweet</h2>
       <form class="form-inline" action="/tweets" method="POST">
         <label for="tweet-text">What are you humming about?</label>
