--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,8 @@
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.4.3/jquery.timeago.min.js"></script>
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.4.3/jquery.timeago.min.js"></script>
 
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/client.js"></script>
@@ -46,7 +47,7 @@
     <span>tweeter</span>
     <div class="right-display">
       <p><strong>Write</strong> a new tweet</p>
-      <i class="fa-solid fa-angles-down"></i>
+      <i class="fa-solid fa-angles-down" id="bounce"></i>
     </div>
 
   </nav>
@@ -65,9 +66,9 @@
   <main class="container">
     <section class="new-tweet">
       <div class="error">
-       <i class="fa-solid fa-triangle-exclamation"></i>
-       <p class="error-msg"></p>
-       <i class="fa-solid fa-triangle-exclamation"></i>
+        <i class="fa-solid fa-triangle-exclamation"></i>
+        <p class="error-msg"></p>
+        <i class="fa-solid fa-triangle-exclamation"></i>
       </div>
       <h2>Compose Tweet</h2>
       <form class="form-inline" action="/tweets" method="POST">
