updated classes in nav section to modify css hover feature

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     <span>tweeter</span>
     <div class="right-display">
       <p><strong>Write</strong> a new tweet</p>
-      <i class="fa-solid fa-angles-down" id="bounce"></i>
+      <i class="fa-solid fa-angles-down"></i>
     </div>
 
   </nav>
