did some minor linting and added in the viewport meta

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
   <!-- Meta Information -->
   <title>Tweeter - Home Page</title>
 
@@ -82,7 +83,11 @@
     </section>
     <section class="tweets-container">
     </section>
+    <div class="uparrow">
+      <i class="fa-solid fa-circle-chevron-up"></i>
+    </div>
   </main>
+
 </body>
 
 </html>
