final editing and linting on project documents

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
     </section>
     <section class="tweets-container">
     </section>
-    <div class="uparrow">
+    <div class="uparrow" id="topbtn">
       <i class="fa-solid fa-circle-chevron-up"></i>
     </div>
   </main>
